fix: close ddc gateway live routing gaps